# ChangeLog for dev-lang/blassic
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/ChangeLog,v 1.30 2010/03/04 04:39:53 jer Exp $

  04 Mar 2010; Jeroen Roovers <jer@gentoo.org> blassic-0.10.2.ebuild:
  Stable for HPPA (bug #306667).

  02 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  blassic-0.10.2.ebuild:
  x86 stable wrt bug #306667

  28 Feb 2010; nixnut <nixnut@gentoo.org> blassic-0.10.2.ebuild:
  ppc stable #306667

  02 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  blassic-0.10.2.ebuild:
  Transfer Prefix keywords

*blassic-0.10.2 (24 Apr 2009)

  24 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +blassic-0.10.2.ebuild:
  version bump

  17 Dec 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +files/blassic-0.10.0-gcc43.patch, blassic-0.10.0.ebuild:
  add patch to enable building with gcc43 submitted by Yaroslav Gorbunov via bug
  #250832

  11 Jan 2008; Fabian Groffen <grobian@gentoo.org> blassic-0.10.0.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  21 Mar 2007; Michael Sterrett <mr_bones_@gentoo.org>
  blassic-0.10.0.ebuild:
  dump virtual/x11

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  12 Mar 2006; Aron Griffis <agriffis@gentoo.org> blassic-0.10.0.ebuild:
  Add deps for modular X

  30 Oct 2005; Fabian Groffen <grobian@gentoo.org> blassic-0.10.0.ebuild:
  Marked ~ppc-macos (bug #110815)

  24 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> -blassic-0.5.4.ebuild,
  -blassic-0.8.1.ebuild:
  clean out old versions

  21 Mar 2005; Guy Martin <gmsoft@gentoo.org> blassic-0.10.0.ebuild:
  Stable on hppa.

  17 Mar 2005; Joseph Jezak <josejx@gentoo.org> blassic-0.10.0.ebuild:
  Marked ppc for bug #84754.

  10 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> blassic-0.10.0.ebuild:
  Stable for x86

*blassic-0.10.0 (12 Feb 2005)

  12 Feb 2005; Michael Sterrett <mr_bones_@gentoo.org> +blassic-0.10.0.ebuild: