@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/blassic
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/ChangeLog,v 1.30 2010/03/04 04:39:53 jer Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/blassic/ChangeLog,v 1.31 2012/11/03 13:25:30 ago Exp $
+
+  03 Nov 2012; Agostino Sarubbo <ago@gentoo.org> blassic-0.10.2.ebuild:
+  Add ~amd64, wrt bug #440676
 
   04 Mar 2010; Jeroen Roovers <jer@gentoo.org> blassic-0.10.2.ebuild:
   Stable for HPPA (bug #306667).
